--- a/Task 20_Marvel_Jupy.ipynb
+++ b/Task 20_Marvel_Jupy.ipynb
@@ -122,10 +122,10 @@
     "## Closing Summary\n",
     "\n",
     "From this Marvel task, I was able to create a mini report where\n",
-    "1.I learnt how to embed an image into python\n",
-    "2.I learnt the basic syntak of markdown (including how to add a code snippet onto python)\n",
-    "3.I compiled a simple python code providing its output\n",
-    "4.I was able to use matplotlib to visualise a sin curve on a jupyter notebook\n",
+    "\n1.I learnt how to embed an image into python\n",
+    "\n2.I learnt the basic syntak of markdown (including how to add a code snippet onto python)\n",
+    "\n3.I compiled a simple python code providing its output\n",
+    "\n4.I was able to use matplotlib to visualise a sin curve on a jupyter notebook\n",
     "\n",
     "This simply goes to show the *versitility* and *credibility* of a tool as robust as **Jupyter notebook**."
    ]
